[package]
name = "grey_johnson_dev"
version = "0.1.0"
authors = ["Grey Johnson <grey.johnson@ufl.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
log = "0.4"
pretty_env_logger = "0.3"